chore: migrated to vite

--- a/src/pages/Popup/index.html
+++ b/src/pages/Popup/index.html
@@ -25,6 +25,8 @@
   </head>
 
   <body>
-    <div id="app-container"></div>
+    <div id="app-container">
+      <script type="module" src="./index.jsx"></script>
+    </div>
   </body>
 </html>
